fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+html{
+    overflow-x: hidden;
+}
 body {
     font-family: "Roboto Mono", monospace;
     overflow-x: hidden;
